--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: poppins;
+    color: var(--white);
 }
 html{
     scroll-behavior: smooth;
@@ -22,9 +23,7 @@ body{
     justify-content: center;
 }
 
-/*  */
 /* main header code start form here  */
-/*  */
 
 header{
     width: 60%;
@@ -36,27 +35,21 @@ header{
     z-index: 2024;
 }
 
-.fix-img1{
+.fix-img{
     position: fixed;
     height: 100vh;
     width: 100vw;
-    left: -20%;
     opacity: 0.1;
     display: flex;
     align-items: center;
     z-index: -1;
 }
-
+.fix-img1{
+    left: -20%;
+}
 .fix-img2{
-    position: fixed;
-    height: 100vh;
-    width: 100vw;
     right: -15%;
-    opacity: 0.1;
-    display: flex;
-    align-items: center;
     justify-content: end;
-    z-index: -1;
 }
 
 nav{
@@ -64,15 +57,12 @@ nav{
     width: 90%;
     border: 2px solid var(--yellow);
     backdrop-filter: blur(30px);
-    background-color: transparent;
     border-radius: 12px;
-    color: var(--white);
     font-size: 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 40px;
-    z-index: 2024;
 }
 nav a{
     color: var(--yellow);
@@ -85,9 +75,7 @@ nav a:hover{
     color: var(--white);
 }
 
-/*  */
 /* Main section Start form here  */
-/*  */
 
 main{
     height: 100%;
@@ -97,9 +85,7 @@ main{
     align-items: center;
 }
 
-/*  */
 /* Home Section From here  */
-/*  */
 
 #Home{
     min-height: 900px;
@@ -130,21 +116,17 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: var(--white);
     font-size: 4em;
     position: absolute;
 }
-
 .content h2:nth-child(1) {
     color: transparent;
     -webkit-text-stroke: 1px var(--green);
 }       
-
 .content h2:nth-child(2) {
     color: #34c52f;
     animation: animate 4s ease-in-out infinite;
 }
-
 @keyframes animate {
     0%,
     100% {
@@ -182,19 +164,15 @@ main{
     justify-content: center;
     margin-top: 100px;
 }
-
 .home-collbration h1{
     font-size: 2rem;
-    color: var(--white);
 }
 
-/*  */
 /* Expert section start from here  */
-/*  */
 
 #experts{
     height: 100vh;
-    min-height: fit-content;
+    min-height: 800px;
     width: 100vw;
     background: var(--black);
     padding: 20px;
@@ -205,7 +183,7 @@ main{
 
 .exp-main{
     height: 100%;
-    min-height: fit-content;
+    min-height: 800px;
     width: 80%;
     min-width: 900px;
     display: flex;
@@ -240,7 +218,6 @@ main{
 .custom-emogi{
     list-style: none;
     padding-left: 0;
-    color: var(--white);
     margin: 10px;
 }
 
@@ -254,33 +231,27 @@ main{
     color: var(--green);
     text-shadow: 1px 1px 1px var(--white);
 }
-
-.exp-img p{
-    margin: 20px;
-    color: var(--white);
-    text-align: justify;
+.price{
+    font-size: 32px;
+    font-weight: bold;
 }
 
-/*  */
 /* Products section start form here  */
-/*  */
 
 #Products{
     height: 100vh;
-    min-height: fit-content;
+    min-height: 800px;
     max-width: 1000px;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-
 .products-content{
     display: flex;
     justify-content: center;
     gap: 10px;
 }
-
 .Headings{
     height: 13%;
     width: fit-content;
@@ -315,16 +286,14 @@ main{
 }
 .img-book p{
     align-self: flex-start;
-    margin: 10px;
+    margin: 10px 0px;
     font-weight: bold;
-    color: var(--white);
 }
 
 /*  */
-/*  */
 /* custom section start here  */
 /*  */
-/*  */
+
 .butn{
     height: fit-content;
     width: fit-content;
@@ -335,24 +304,23 @@ main{
     border: 2px solid var(--yellow);
     border-radius: 12px;
 }
-
 hr{
     border: 2px solid var(--green);
     width: 100vw;
 }
-/*  */
+.com-para{
+    text-align: justify;
+    margin: 20px;
+}
 /*  */
 /* custom section end here  */
 /*  */
-/*  */
 
-
-/*  */
 /* About us Start here */
-/*  */
+
 .About-Us{
-    height: 100vh;
-    min-height: fit-content;
+    height: 90vh;
+    min-height: 700px;
     width: 100vw;
     background: var(--black);
     padding: 20px;
@@ -360,27 +328,23 @@ hr{
     align-items: center;
     justify-content: center;
 }
-
 .About-content{
     height: 100%;
-    min-height: fit-content;
+    min-height: 700px;
     width: 80%;
     min-width: 900px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
-
 .About-img{
     height: 80%;
     min-height: 700px;
     width: 45%;
-    min-width: 600px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
 .About-img img{
     height: 400px;
     width: 400px;
@@ -388,11 +352,9 @@ hr{
     transition: all 2s;
     animation: logo 4s 1s infinite linear alternate;
 }
-
 .About-img img:hover{
     transform: scale(1.1);
 }
-
 @keyframes logo {
     0%{transform: translateY(0px);
         filter:  drop-shadow(1px 1px 0px var(--white));}
@@ -401,7 +363,6 @@ hr{
     100%{transform: translateY(0px);
         filter:  drop-shadow(1px 1px 0px var(--white));}
 }
-
 .About-con{
     height: 80%;
     min-height: fit-content;
@@ -411,34 +372,29 @@ hr{
     align-items: center;
     justify-content: center;
 }
-
 .About-con h2{
     font-size: 3.5rem;
     color: var(--green);
     text-shadow: 1px 1px 1px var(--white);
 }
 
-.About-con p{
-    margin: 20px;
-    color: var(--white);
-    text-align: justify;
-    font-size: 1.2rem;
-}
-
-
-/*  */
 /* Founder Message start here  */
-/*  */
 
 #founder-message{
     height: 50vh;
+    min-height: 400px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
-#founder-message div{
+q{
+    color: var(--green);
+    font-size: 2.2rem;
+    filter: drop-shadow(1px 1px 0px var(--white));
+    margin-bottom: 10px;
+}
+.found-div{
     height: 200px;
     min-height: fit-content;
     width: 700px;
@@ -449,53 +405,38 @@ hr{
     align-items: center;
     justify-content: center;
 }
-q{
-    color: var(--green);
-    font-size: 2.2rem;
-    filter: drop-shadow(1px 1px 0px var(--white));
-    margin-bottom: 10px;
-}
-
 .found-div p{
     color: var(--white);
     font-size: 16px;
     text-align: center;
 }
-
 .found-div h2{
     color: var(--yellow);
     margin-top: 20px;
 }
-
 .linehr{
     border: 1px solid var(--green);
     width: 650px;
     margin-top: 10px;
 }
 
-
-/*  */
 /* Contact Us Section start here */
-/*  */
 
 #Contact-us{
     height: 80vh;
-    min-height: fit-content;
+    min-height: 800px;
     width: 100vw;
     background: var(--black);
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
 .container {
-    height: fit-content;
-	width: 950px;
+    height: 700px;
+	width: fit-content;
 	margin: 80px auto;
-	color: var(--white);
 	line-height: 1.5;
 }
-
 .text-center {
 	text-align: center;
 }
@@ -504,38 +445,31 @@ q{
     font-size: 4rem;
     color: var(--yellow);
 }
-
 .contact-content {
 	display: flex;
 	margin-top: 40px;
 }
-
 .icon {
 	border-radius: 30px;
 	padding: 15px;
 	vertical-align: top;
     height: 100px;
 }
-
 .contact-info {
 	display: inline-block;
 	padding: 4px 20px 0px 20px;
 }
-
 .contact-info-title{
     color: var(--green);
 }
-
 .address-line {
 	margin-top: 40px;
     display: flex;
     align-items: center;
 }
-
 .col-1 {
 	width: 530px;
 }
-
 .col-2 {
     width: 600px;
     height: 450px;
@@ -543,21 +477,105 @@ q{
 	background-color: var(--white);
     border-radius: 25px;
 }
-
 iframe{
     border-radius: 25px;
 }
-
 .copyright{
     margin-top: 20px;
     text-align: center;
     font-size: 14px;
 }
 
-
-@media (max-width:1384px) {
-    html{
-        display: none;
+@media (max-width:1384px) and (min-width:1024px) {
+    nav{
+        font-size: 1.5rem;
     }
-    
+    .fix-img1{
+        left: -25%;
+    }
+    .fix-img2{
+        right: -12%;
+    }
+    .exp-img{
+        min-width: 400px;
+    }
+    .price{
+        font-size: 28px;
+    }
+    .About-Us{
+        height: 700px;
+    }
+    .About-content{
+        height: 500px;
+    }
+    .About-img{
+        width: 400px;
+        height: 100px;
+    }
+    .About-img img{
+        width: 300px;
+        height: 300px;
+    }
+    .exp-img h2{
+        font-size: 2.5rem;
+    }
+    .About-con h2{
+        font-size: 2.8rem;
+    }
+    .com-para{
+        font-size: 14px;
+    }
+    .col-2{
+        width: 400px;
+    }
+    iframe{
+        width: 400px;
+    }
+}
+
+@media (max-width:1024px) and (min-width:768px) {
+    nav{
+        font-size: 1.5rem;
+    }
+    .fix-img1{
+        left: -25%;
+    }
+    .fix-img2{
+        right: -12%;
+    }
+    .exp-img{
+        min-width: 400px;
+    }
+    .price{
+        font-size: 28px;
+    }
+    .About-Us{
+        height: 700px;
+    }
+    .About-content{
+        height: 500px;
+    }
+    .About-img{
+        width: 400px;
+        height: 100px;
+    }
+    .About-img img{
+        width: 300px;
+        height: 300px;
+    }
+    .exp-img h2{
+        font-size: 2.5rem;
+    }
+    .About-con h2{
+        font-size: 2.8rem;
+    }
+    .com-para{
+        font-size: 14px;
+    }
+    .col-2{
+        width: 400px;
+    }
+    iframe{
+        width: 400px;
+    }
 }
